--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,4 +2,31 @@
 name = "gzm-survey-analysis"
 version = "0.1.0"
 requires-python = ">=3.13"
-dependencies = []
+dependencies = [
+    "click>=8.1.8",
+    "duckdb>=1.2.2",
+    "google-genai>=1.10.0",
+    "jinja2>=3.1.6",
+    "openpyxl>=3.1.5",
+    "pandas>=2.2.3",
+    "pydantic-ai-slim[groq]>=0.0.55",
+    "pydantic-evals[logfire]>=0.0.55",
+    "pyreadstat>=1.2.8",
+    "python-dotenv>=1.1.0",
+    "pyyaml>=6.0.1",
+]
+
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[tool.hatch.build.targets.wheel]
+packages = ["src"]
+
+[project.scripts]
+db-query = "src.query_db:cli"
+llm-query = "src.llm_query_cli:cli"
+
+[tool.logfire]
+project_name = "gzm"
+project_url = "https://logfire.pydantic.dev/zkme/gzm"
