--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ dependencies = [
     "pydantic-ai-slim[groq]>=0.0.55",
     "pydantic-evals[logfire]>=0.0.55",
     "pyreadstat>=1.2.8",
+    "pytest>=8.3.5",
+    "pytest-asyncio>=0.26.0",
     "python-dotenv>=1.1.0",
     "pyyaml>=6.0.1",
 ]
@@ -26,6 +28,7 @@ packages = ["src"]
 [project.scripts]
 db-query = "src.query_db:cli"
 llm-query = "src.llm_query_cli:cli"
+evaluate = "evals.evaluation:main"
 
 [tool.logfire]
 project_name = "gzm"
