--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,12 +23,16 @@ requires = ["hatchling"]
 build-backend = "hatchling.build"
 
 [tool.hatch.build.targets.wheel]
-packages = ["src"]
+packages = ["src/research"]
+
+[tool.hatch.metadata]
+allow-direct-references = true
 
 [project.scripts]
-db-query = "src.query_db:cli"
-llm-query = "src.llm_query_cli:cli"
+db = "research.cli.db_cli:cli"
+llm-query = "research.cli.llm_cli:cli"
 evaluate = "evals.evaluation:main"
+db-load = "research.data_preprocessing.preprocess_spss_data:cli"
 
 [tool.logfire]
 project_name = "gzm"
