--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,8 @@ GZM_DATA_DIR=data
 GZM_SQL_PROMPT_TEMPLATE=src/research/llm/prompts/sql_query_prompt.jinja2
 GZM_SPSS_SURVEY_METADATA=src/research/data_preprocessing/survey_metadata_spss.json
 GZM_SURVEY_METADATA=src/survey_metadata_queries.json
+GZM_FAISS_INDEX_PATH=src/research/llm/faiss.index
+GZM_EXAMPLES_PATH=src/research/llm/examples.joblib
+OPENAI_API_KEY=your_openai_api_key_here
+JINA_API_KEY=your_jina_api_key_here
+EMBEDDING_MODEL=text-embedding-3-large
